ingress/ingressController.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress-controller
spec:
  rules:
  - host: capstone-demo.ddns.net
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8080
      - path: /chat
        pathType: Prefix
        backend:
          service:
            name: mchat-service
            port:
              number: 8065
      
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8081
